--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
   {%- seo -%} <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url
   }}"> {% if page.hasmath %}
   <link
